tests/should_fail/try_non_result.fit
// Exercises: '?' applied to non-Result expression (expression-level check, checker.ts try case line 1)
fn get_value() -> String

fn test() -> String {
    get_value()?
}
